# reverie-playcraft-nexus

./: .gitattributes  .gitignore  README.md  package.json
.github/workflows/: pages.yml
examples/: character.example.json  user_identity.example.json  world_factor.example.json
portal/: index.html
portal/assets/: card-component-catalog.json  card-studio.css  card-studio.js  component-preview.css  component-workshop.css  component-workshop.js  mvu-turn-simulator.js  mvu-variable-structure.js  portal.css  portal.js  rolecard-export-plan.js  rolecard-file-codec.js  rolecard-import-analysis.js  (+20 more)
shared/: component-workshop-contract.js  workshop-package-contract.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: rpn.json
src-tauri/src/: ai_transport.rs  main.rs  mcp_host.rs
src-tauri/windows/: English.nsh  SimpChinese.nsh
tools/: batch_version.test.mjs  build_desktop_release.mjs  build_pages.mjs  check_ui_builder_embed.mjs  component_workshop_contract.test.mjs  component_workshop_frontend.test.mjs  desktop_shell_contract.test.mjs  mvu_simulator_portal_contract.test.mjs  mvu_turn_simulator.test.mjs  mvu_variable_structure.test.mjs  next_batch_version.mjs  performance_budget.test.mjs  refresh_studio_component_catalog.mjs  rolecard_export_plan.test.mjs  rolecard_file_codec.test.mjs  rolecard_import_analysis.test.mjs  rpn_web_boundary.test.mjs  studio_agent_history.test.mjs  studio_agent_orchestrator.test.mjs  studio_ai.test.mjs  studio_api_profiles.test.mjs  studio_knowledge.test.mjs  studio_local_workspace.test.mjs  studio_mcp.test.mjs  studio_workspace_persistence.test.mjs  sync_ui_builder_embed.mjs  ui_simulation_package.test.mjs  workflow_blueprint.test.mjs
(+3 files in other folders)
