[package]
name = "rpn-desktop"
# The distributable version is read from ../package.json by tauri.conf.json.
version = "0.0.0"
edition = "2021"

[features]
default = []
release-updater = ["dep:tauri-plugin-updater"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.5", features = ["devtools"] }
tauri-plugin-updater = { version = "=2.10.1", optional = true }
