[package]
name = "rpn-desktop"
# The distributable version is read from ../package.json by tauri.conf.json.
version = "0.0.0"
edition = "2021"

[features]
default = []
release-updater = ["dep:tauri-plugin-updater"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
dunce = "=1.0.5"
getrandom = "=0.3.4"
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls-no-provider", "system-proxy"] }
rustls = { version = "=0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
same-file = "=1.0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = ["devtools"] }
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-updater = { version = "=2.10.1", optional = true }
tokio = { version = "=1.53.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "=0.7.19", features = ["rt"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Storage_FileSystem"] }
